--- a/Wedding invitation.html
+++ b/Wedding invitation.html
@@ -248,7 +248,7 @@
                 <div class="row pb-85 mobile-pb-50">
                     <div class="section-title pt-2 text-center section-title-white wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" style="visibility: visible; animation-duration: 1s; animation-delay: 0.3s; animation-name: fadeInUp;">
                         <!-- <h5>Venue of the event</h5> -->
-                        <h3 class="font-miama">Lễ vu quy</h3>
+                        <h3 class="font-miama">Sự kiện</h3>
                         <div class="tree-img">
                             <img src="./Wedding invitation_files/tree-img2.png" alt="">
                         </div>
