--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             <img src="images/embe.png" alt="groom" class="img-responsive">
                         </div>
                         <div class="desc-groom">
-                            <h3>Joefrey Mahusay</h3>
+                            <h3>Nguyễn Thuỳ Dung</h3>
                             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
                         </div>
                     </div>
@@ -109,7 +109,7 @@
                             <img src="images/2T7A3181.JPG" alt="groom" class="img-responsive">
                         </div>
                         <div class="desc-bride">
-                            <h3>Sheila Mahusay</h3>
+                            <h3>Nguyễn Đức Mạnh</h3>
                             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                     </div>
                     <div class="col-md-4 col-sm-12">
                         <div class="event-infobox">
-                            <h2>Wedding Party</h2>
+                            <h2 class="title-box">Wedding Party</h2>
                             <h1>7:30 pm</h1>
                             <span>St. Thomas's<br>Church, London, U.K.</span>
                             <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin </p>
