update image and layout

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
     <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;200&display=swap" rel="stylesheet">
     <!-- Animate.css -->
     <link rel="stylesheet" href="css/animate.css">
     <!-- Icomoon Icon Fonts-->
@@ -59,7 +61,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
-                        <div id="fh5co-logo"><a href="index.html">Đức Mạnh & Thuỳ Dung<strong>.</strong></a></div>
+                        <div id="fh5co-logo"><a href="index.html" style="font-family: 'Great Vibes', cursive;">Đức Mạnh & Thuỳ Dung<strong>.</strong></a></div>
                     </div>
                 </div>
 
@@ -96,7 +98,7 @@
                 <div class="couple-wrap animate-box">
                     <div class="couple-half">
                         <div class="groom">
-                            <img src="images/embe.png" alt="groom" class="img-responsive">
+                            <img src="images/embe.png" style="background-image: url(images/embe.png);" alt="embe" class="img-responsive">
                         </div>
                         <div class="desc-groom">
                             <h3>Nguyễn Thuỳ Dung</h3>
@@ -106,7 +108,7 @@
                     <p class="heart text-center"><i class="icon-heart2"></i></p>
                     <div class="couple-half">
                         <div class="bride">
-                            <img src="images/2T7A3181.JPG" alt="groom" class="img-responsive">
+                            <img src="images/2T7A3181.JPG" alt="me" class="img-responsive">
                         </div>
                         <div class="desc-bride">
                             <h3>Nguyễn Đức Mạnh</h3>
@@ -118,7 +120,7 @@
         </div>
 
 
-        <section section-scroll="2" class="event-area" style="background: url(https://www.webstrot.com/html/wedding/01_arabic_wedding/assets/images/icons/sectionright.png)">
+        <section section-scroll="2" class="event-area">
             <div class="container" style="padding-right: 15px;
 				padding-left: 15px;
 				margin-right: auto;
@@ -143,26 +145,26 @@
                     <div class="col-md-4 col-sm-12">
                         <div class="event-infobox">
                             <h2>Main Ceremony</h2>
-                            <h1>7:30 pm</h1>
-                            <span>St. Thomas's<br>Church, London, U.K.</span>
-                            <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin </p>
+                            <h1>9:00 am</h1>
+                            <span>St. Bình Minh<br>Nam Trực, Nam Định, VN.</span>
+                            <p>Xóm Tây Hành Quần, xã Bình Minh, huyện Nam Trực, tỉnh Nam Định</p>
                             <div class="clearfix"></div>
-                            <a style="transition: all 0.5s;" class="btgbtn"><img src="https://www.webstrot.com/html/wedding/01_arabic_wedding/assets/images/icons/map.png" alt="Map" class="img-responsive"></a>
+                            <a style="transition: all 0.5s;" class="btgbtn" href="https://www.google.com/maps/place/20%C2%B019'43.6%22N+106%C2%B013'13.9%22E/@20.328777,106.220533,17z/data=!3m1!4b1!4m4!3m3!8m2!3d20.328777!4d106.220533">Open Map</a>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-12">
                         <div class="event-img text-center">
-                            <figure><img style="width: 90%;" src="./images/2T7A3761.JPG" alt=""></figure>
+                            <figure><img style="width: 90%;" src="./images/c3dfc6870648db168259.jpg" alt=""></figure>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-12">
                         <div class="event-infobox">
                             <h2 class="title-box">Wedding Party</h2>
-                            <h1>7:30 pm</h1>
-                            <span>St. Thomas's<br>Church, London, U.K.</span>
-                            <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin </p>
+                            <h1>11:00 am</h1>
+                            <span>St. Sài Đồng<br>Long Biên, Hà Nội, VN.</span>
+                            <p>Nhà số 1 Ngõ 114 Sài Đồng Long Biên Hà Nội</p>
                             <div class="clearfix"></div>
-                            <a style="text-decoration: none;" class="btgbtn"><img src="https://www.webstrot.com/html/wedding/01_arabic_wedding/assets/images/icons/map.png" alt="Map" class="img-responsive"></a>
+                            <a style="text-decoration: none;" class="btgbtn" href="https://www.google.com/maps/place/21%C2%B002'10.6%22N+105%C2%B054'42.8%22E/@21.036264,105.91188,17z/data=!3m1!4b1!4m4!3m3!8m2!3d21.036264!4d105.91188">Open Map</a>
                         </div>
                     </div>
                 </div>
@@ -183,80 +185,80 @@
                     <div class="col-md-12">
                         <ul id="fh5co-gallery-list">
 
-                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpg); ">
-                                <a href="images/gallery-1.jpg" class="popup-link">
+                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/3da9f3563e99e3c7ba88.jpg); ">
+                                <a href="images/3da9f3563e99e3c7ba88.jpg" class="popup-link">
                                     <div class="case-studies-summary">
                                         <span>14 Photos</span>
-                                        <h2>Two Glas of Juice</h2>
+                                        <!-- <h2>Two Glas of Juice</h2> -->
                                     </div>
                                 </a>
                             </li>
-                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
-                                <a href="images/gallery-2.jpg" class="popup-link color-2">
+                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/7c0c5d629cad41f318bc.jpg); ">
+                                <a href="images/7c0c5d629cad41f318bc.jpg" class="popup-link color-2">
                                     <div class="case-studies-summary">
                                         <span>30 Photos</span>
-                                        <h2>Timer starts now!</h2>
+                                        <!-- <h2>Timer starts now!</h2> -->
                                     </div>
                                 </a>
                             </li>
 
 
-                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
-                                <a href="images/gallery-3.jpg" class="popup-link color-3">
+                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/c6d6a66067afbaf1e3be.jpg); ">
+                                <a href="images/c6d6a66067afbaf1e3be.jpg" class="popup-link color-3">
                                     <div class="case-studies-summary">
                                         <span>90 Photos</span>
-                                        <h2>Beautiful sunset</h2>
+                                        <!-- <h2>Beautiful sunset</h2> -->
                                     </div>
                                 </a>
                             </li>
-                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-4.jpg); ">
-                                <a href="images/gallery-4.jpg" class="popup-link color-4">
+                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/73f43d15fcda218478cb.jpg); ">
+                                <a href="images/73f43d15fcda218478cb.jpg" class="popup-link color-4">
                                     <div class="case-studies-summary">
                                         <span>12 Photos</span>
-                                        <h2>Company's Conference Room</h2>
+                                        <!-- <h2>Company's Conference Room</h2> -->
                                     </div>
                                 </a>
                             </li>
 
-                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-5.jpg); ">
-                                <a href="images/gallery-5.jpg" class="popup-link color-3">
+                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/46702a66eba936f76fb8.jpg); ">
+                                <a href="images/46702a66eba936f76fb8.jpg" class="popup-link color-3">
                                     <div class="case-studies-summary">
                                         <span>50 Photos</span>
-                                        <h2>Useful baskets</h2>
+                                        <!-- <h2>Useful baskets</h2> -->
                                     </div>
                                 </a>
                             </li>
-                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-6.jpg); ">
-                                <a href="images/gallery-6.jpg" class="popup-link color-4">
+                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/86407b959e016.jpg); ">
+                                <a href="images/86407b959e016.jpg" class="popup-link color-4">
                                     <div class="case-studies-summary">
                                         <span>45 Photos</span>
-                                        <h2>Skater man in the road</h2>
+                                        <!-- <h2>Skater man in the road</h2> -->
                                     </div>
                                 </a>
                             </li>
 
-                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-7.jpg); ">
-                                <a href="images/gallery-7.jpg" class="popup-link color-4">
+                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/a60fd83017ffcaa193ee.jpg); ">
+                                <a href="images/a60fd83017ffcaa193ee.jpg" class="popup-link color-4">
                                     <div class="case-studies-summary">
                                         <span>35 Photos</span>
-                                        <h2>Two Glas of Juice</h2>
+                                        <!-- <h2>Two Glas of Juice</h2> -->
                                     </div>
                                 </a>
                             </li>
 
-                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-8.jpg); ">
-                                <a href="images/gallery-8.jpg" class="popup-link color-5">
+                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/2abbba157adaa784fecb.jpg); ">
+                                <a href="images/2abbba157adaa784fecb.jpg" class="popup-link color-5">
                                     <div class="case-studies-summary">
                                         <span>90 Photos</span>
-                                        <h2>Timer starts now!</h2>
+                                        <!-- <h2>Timer starts now!</h2> -->
                                     </div>
                                 </a>
                             </li>
-                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-9.jpg); ">
-                                <a href="images/gallery-9.jpg" class="popup-link color-6">
+                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/2T7A3330.jpg); ">
+                                <a href="images/2T7A3330.jpg" class="popup-link color-6">
                                     <div class="case-studies-summary">
                                         <span>56 Photos</span>
-                                        <h2>Beautiful sunset</h2>
+                                        <!-- <h2>Beautiful sunset</h2> -->
                                     </div>
                                 </a>
                             </li>
@@ -277,21 +279,21 @@
                 </div>
                 <div class="row animate-box">
                     <div class="col-md-10 col-md-offset-1">
-                        <form class="form-inline">
+                        <form class="form-inline" id="form-submit" onsubmit="submitFunction()">
                             <div class="col-md-4 col-sm-4">
                                 <div class="form-group">
                                     <label for="name" class="sr-only">Name</label>
-                                    <input type="name" class="form-control" id="name" placeholder="Name">
+                                    <input type="name" class="form-control" id="name" name="name" placeholder="Name" required maxlength="19">
                                 </div>
                             </div>
                             <div class="col-md-4 col-sm-4">
                                 <div class="form-group">
-                                    <label for="email" class="sr-only">Email</label>
-                                    <input type="email" class="form-control" id="email" placeholder="Email">
+                                    <label for="text" class="sr-only">Best wishes</label>
+                                    <input type="text" class="form-control" id="text" name="text" placeholder="Best wishes" maxlength="39"> 
                                 </div>
                             </div>
                             <div class="col-md-4 col-sm-4">
-                                <button type="submit" class="btn btn-default btn-block">I am Attending</button>
+                                <button id="submit" type="button" onclick="submitFunction(event)" class="btn btn-default btn-block">I am Attending</button>
                             </div>
                         </form>
                     </div>
@@ -309,14 +311,18 @@
                 <div class="row">
                     <div class="col-md-6 animate-box">
                         <div class="fh5co-video fh5co-bg" style="background-image: url(images/img_bg_3.jpg); ">
-                            <a href="https://vimeo.com/channels/staffpicks/93951774" class="popup-vimeo"><i class="icon-video2"></i></a>
+                            <a class="popup-vimeo" style="background-image: url(images/qrmanh.jpg);">
+                               
+                            </a>
                             <div class="overlay"></div>
                         </div>
                     </div>
 
                     <div class="col-md-6 animate-box">
                         <div class="fh5co-video fh5co-bg" style="background-image: url(images/img_bg_3.jpg); ">
-                            <a href="https://vimeo.com/channels/staffpicks/93951774" class="popup-vimeo"><i class="icon-video2"></i></a>
+                            <a class="popup-vimeo" style="background-image: url(images/qrmanh.jpg);"> 
+                               
+                            </a>
                             <div class="overlay"></div>
                         </div>
                     </div>
@@ -370,7 +376,28 @@
             month: d.getMonth() + 1,
             day: d.getDate(),
             enableUtc: false
-        });
+        }); 
+    function submitFunction(event) {
+ /* Submit Form */
+     event.preventDefault()
+     const form = {name: document.getElementById("name")?.value, text: document.getElementById("text")?.value}
+     const submitButton = document.getElementById("submit")
+     const scriptURL = 'https://script.google.com/macros/s/AKfycbxWSve9cGR-DCzSx3_8USwrhVKSdDNKov4dzh9NkBb2pQ0Y6kqCmp6zGhBn5zpA_xgkdg/exec'
+     submitButton.disabled = true
+     console.log("requestBody", form)
+     if(Object.keys(form).length === 0) return
+
+    const jqxhr = $.ajax({
+                url: scriptURL,
+                method: "POST",
+                dataType: "json",
+                data: form
+            }).success(
+                  alert("Success!")
+            )
+    submitButton.disabled = false      
+    }
+
     </script>
 
 </body>
