update stay and image

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
-                        <div id="fh5co-logo"><a href="index.html" style="font-family: 'Great Vibes', cursive;">Đức Mạnh & Thuỳ Dung<strong>.</strong></a></div>
+                        <div id="fh5co-logo"><a id="flicker" style="font-family: 'Great Vibes', cursive;">Đức Mạnh & Thuỳ Dung<strong></strong></a></div>
                     </div>
                 </div>
 
@@ -75,7 +75,7 @@
                     <div class="col-md-8 col-md-offset-2 text-center">
                         <div class="display-t">
                             <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                                <h1>Save The Date</h1>
+                                <h1 id="blink">Save The Date</h1>
                                 <h2>We Are Getting Married</h2>
                                 <div class="simply-countdown simply-countdown-one"></div>
                                 <!-- <p><a href="#" class="btn btn-default btn-sm">Save the date</a></p> -->
@@ -86,19 +86,19 @@
             </div>
         </header>
 
-        <div id="fh5co-couple">
+        <!-- <div id="fh5co-couple">
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
                         <h2>Hello!</h2>
-                        <h3>April 2th, 2022</h3>
+                        <h3>April 2th, 2023</h3>
                         <p>We invited you to celebrate our wedding</p>
                     </div>
                 </div>
-                <div class="couple-wrap animate-box">
+                <div class="couple-wrap animate-box" >
                     <div class="couple-half">
                         <div class="groom">
-                            <img src="images/embe.png" style="background-image: url(images/embe.png);" alt="embe" class="img-responsive">
+                            <img src="images/embe.png" alt="embe" class="img-responsive">
                         </div>
                         <div class="desc-groom">
                             <h3>Nguyễn Thuỳ Dung</h3>
@@ -117,9 +117,34 @@
                     </div>
                 </div>
             </div>
+        </div> -->
+
+        <div id="section0" class="container pt-90 pb-10 mobile-pt-50 overflow-hidden">
+            <div class="section-container">
+                <div class="weddio-ring position-absolute d-flex justify-content-center align-items-center wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.3s" style="visibility: visible; animation-duration: 1.3s; animation-delay: 1.3s; animation-name: fadeInUp;">
+                    <img src="images/weddio-ring-img.png" alt="weddio ring">
+                </div>
+                <div class="col-12 col-sm-12 col-md-5 pb-40 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" style="visibility: visible; animation-duration: 1s; animation-delay: 0.3s; animation-name: fadeInUp;">
+                    <div class="weddio-img">
+                        <img src="images/manh.jpg" alt="">
+                    </div>
+                    <div class="weddio-content">
+                        <h5>Groom</h5>
+                        <h3>Nguyễn Đức Mạnh</h3>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-12 col-md-5 pb-40 mt-50 mobile-mt-0 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s" style="visibility: visible; animation-duration: 1s; animation-delay: 0.6s; animation-name: fadeInUp;">
+                    <div class="weddio-img">
+                        <img src="images/embe.png" alt="">
+                    </div>
+                    <div class="weddio-content text-start text-sm-start text-md-end text-lg-end">
+                        <h5>Bride</h5>
+                        <h3 class="embename">Nguyễn Thùy Dung</h3>
+                    </div>
+                </div>
+            </div>
         </div>
-
-
+        
         <section section-scroll="2" class="event-area">
             <div class="container" style="padding-right: 15px;
 				padding-left: 15px;
@@ -147,7 +172,7 @@
                             <h2>Main Ceremony</h2>
                             <h1>9:00 am</h1>
                             <span>St. Bình Minh<br>Nam Trực, Nam Định, VN.</span>
-                            <p>Xóm Tây Hành Quần, xã Bình Minh, huyện Nam Trực, tỉnh Nam Định</p>
+                            <p>Xóm Tây Hành Quần, Xã Bình Minh, Huyện Nam Trực, Tỉnh Nam Định</p>
                             <div class="clearfix"></div>
                             <a style="transition: all 0.5s;" class="btgbtn" href="https://www.google.com/maps/place/20%C2%B019'43.6%22N+106%C2%B013'13.9%22E/@20.328777,106.220533,17z/data=!3m1!4b1!4m4!3m3!8m2!3d20.328777!4d106.220533">Open Map</a>
                         </div>
@@ -162,7 +187,7 @@
                             <h2 class="title-box">Wedding Party</h2>
                             <h1>11:00 am</h1>
                             <span>St. Sài Đồng<br>Long Biên, Hà Nội, VN.</span>
-                            <p>Nhà số 1 Ngõ 114 Sài Đồng Long Biên Hà Nội</p>
+                            <p>Nhà số 1 Ngõ 114 Phố Sài Đồng Quận Long Biên Thành Phố Hà Nội</p>
                             <div class="clearfix"></div>
                             <a style="text-decoration: none;" class="btgbtn" href="https://www.google.com/maps/place/21%C2%B002'10.6%22N+105%C2%B054'42.8%22E/@21.036264,105.91188,17z/data=!3m1!4b1!4m4!3m3!8m2!3d21.036264!4d105.91188">Open Map</a>
                         </div>
@@ -178,7 +203,7 @@
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
                         <span>Our Memories</span>
                         <h2>Wedding Gallery</h2>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                        <!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
                     </div>
                 </div>
                 <div class="row row-bottom-padded-md">
@@ -280,20 +305,43 @@
                 <div class="row animate-box">
                     <div class="col-md-10 col-md-offset-1">
                         <form class="form-inline" id="form-submit" onsubmit="submitFunction()">
-                            <div class="col-md-4 col-sm-4">
+                            <div class="col-md-6 col-sm-6">
                                 <div class="form-group">
                                     <label for="name" class="sr-only">Name</label>
-                                    <input type="name" class="form-control" id="name" name="name" placeholder="Name" required maxlength="19">
+                                    <input type="name" class="form-control" id="name" name="name" placeholder="Name" required maxlength="18">
                                 </div>
                             </div>
-                            <div class="col-md-4 col-sm-4">
+                            <div class="col-md-6 col-sm-6">
                                 <div class="form-group">
                                     <label for="text" class="sr-only">Best wishes</label>
-                                    <input type="text" class="form-control" id="text" name="text" placeholder="Best wishes" maxlength="39"> 
+                                    <input type="text" class="form-control" id="text" name="text" placeholder="Best wishes" maxlength="38"> 
                                 </div>
+                            </div>
+                            <!-- <div class="col-md-12 col-sm-12">
+                                <div class="form-group">
+                                    <label for="text" class="sr-only">Best wishes</label>
+                                    <input type="text" class="form-control" id="text" name="text" placeholder="Best wishes" maxlength="38"> 
+                                </div>
+                            </div> -->
+                            <div class="col-md-12 col-sm-12 flex-column" style="font-size: 20px; color: floralwhite; padding-top: 3%;">
+                                <label class="text-center">Will you come and have fun with us?</label>
+        
+                                <label class="label-input text-center">
+                                    <input type="radio" id="radio01" name="attend" value="1" checked="">
+                                    <span>Yes, I will attend</span>
+                                </label>   
+                                <label class="label-input text-center">
+                                    <input type="radio" id="radio02" name="attend" value="0">
+                                    <span>Sorry, I can't attend</span>
+                                </label>
+                                <br>
+                            </div>
+                            <div class="col-md-4 col-sm-4">
                             </div>
                             <div class="col-md-4 col-sm-4">
                                 <button id="submit" type="button" onclick="submitFunction(event)" class="btn btn-default btn-block">I am Attending</button>
+                            </div>
+                            <div class="col-md-4 col-sm-4">
                             </div>
                         </form>
                     </div>
@@ -305,7 +353,7 @@
                 <div class="row animate-box">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
                         <h2>We Offer Services</h2>
-                        <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                        <p>For guests who are busy or unable to attend, If you want to congratulate and send us a message, You can scan the code below</p>
                     </div>
                 </div>
                 <div class="row">
@@ -380,14 +428,21 @@
     function submitFunction(event) {
  /* Submit Form */
      event.preventDefault()
-     const form = {name: document.getElementById("name")?.value, text: document.getElementById("text")?.value}
+     const form = {
+     name: document.getElementById("name")?.value, 
+     text: document.getElementById("text")?.value
+    }
      const submitButton = document.getElementById("submit")
      const scriptURL = 'https://script.google.com/macros/s/AKfycbxWSve9cGR-DCzSx3_8USwrhVKSdDNKov4dzh9NkBb2pQ0Y6kqCmp6zGhBn5zpA_xgkdg/exec'
      submitButton.disabled = true
-     console.log("requestBody", form)
-     if(Object.keys(form).length === 0) return
-
-    const jqxhr = $.ajax({
+     for(var key in form) {
+        if(form[key] === "") {
+           delete form[key]
+        }
+    }
+    if(Object.keys(form).length !== 0) {
+        form.join = document.getElementById("radio01").checked ? "Yes" : "No"
+        const jqxhr = $.ajax({
                 url: scriptURL,
                 method: "POST",
                 dataType: "json",
@@ -395,6 +450,10 @@
             }).success(
                   alert("Success!")
             )
+    } else {
+        alert("Please enter your name")
+        document.getElementById("name")?.focus();
+    }
     submitButton.disabled = false      
     }
 
