change en to vn text

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                     <div class="col-md-8 col-md-offset-2 text-center">
                         <div class="display-t">
                             <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                                <h1 id="blink">Save The Date</h1>
-                                <h2>We Are Getting Married</h2>
+                                <h1 id="blink" class="hi">Trân Trọng Kính Mời</h1>
+                                <h2>Tới tham dự lễ thành hôn của chúng tôi</h2>
                                 <div class="simply-countdown simply-countdown-one"></div>
                                 <!-- <p><a href="#" class="btn btn-default btn-sm">Save the date</a></p> -->
                             </div>
@@ -88,39 +88,6 @@
                 </div>
             </div>
         </header>
-
-        <!-- <div id="fh5co-couple">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                        <h2>Hello!</h2>
-                        <h3>April 2th, 2023</h3>
-                        <p>We invited you to celebrate our wedding</p>
-                    </div>
-                </div>
-                <div class="couple-wrap animate-box" >
-                    <div class="couple-half">
-                        <div class="groom">
-                            <img src="images/embe.png" alt="embe" class="img-responsive">
-                        </div>
-                        <div class="desc-groom">
-                            <h3>Nguyễn Thuỳ Dung</h3>
-                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
-                        </div>
-                    </div>
-                    <p class="heart text-center"><i class="icon-heart2"></i></p>
-                    <div class="couple-half">
-                        <div class="bride">
-                            <img src="images/2T7A3181.JPG" alt="me" class="img-responsive">
-                        </div>
-                        <div class="desc-bride">
-                            <h3>Nguyễn Đức Mạnh</h3>
-                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
 
         <div id="section0" class="container pt-90 pb-10 mobile-pt-50 overflow-hidden">
             <div class="section-container">
@@ -132,7 +99,7 @@
                         <img src="images/manh.jpg" alt="">
                     </div>
                     <div class="weddio-content">
-                        <h5>Groom</h5>
+                        <h5>Chú rể</h5>
                         <h3>Nguyễn Đức Mạnh</h3>
                     </div>
                 </div>
@@ -141,7 +108,7 @@
                         <img src="images/embe.png" alt="">
                     </div>
                     <div class="weddio-content text-start text-sm-start text-md-end text-lg-end">
-                        <h5>Bride</h5>
+                        <h5>Cô dâu</h5>
                         <h3 class="embename">Nguyễn Thùy Dung</h3>
                     </div>
                 </div>
@@ -160,24 +127,25 @@
 						text-align: center;
 						position: relative;
 						margin: 0 0 60px;">
-                            <p style="display: block;
+
+                            <!-- <p style="display: block;
 							margin: 0 0 5px;
 							color: #5eb141;
 							font-size: 18px;
-							text-transform: uppercase;">Ceremony &amp; party</p>
-                            <h2>THE WEDDING EVENT</h2>
+							text-transform: uppercase;">Ceremony &amp; party</p> -->
+                            <h2 style="color: chocolate;">Thời gian & Địa Điểm</h2>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-4 col-sm-12">
                         <div class="event-infobox">
-                            <h2>Main Ceremony</h2>
+                            <h2>Lễ vu quy</h2>
                             <h1>9:00 am</h1>
-                            <span>St. Bình Minh<br>Nam Trực, Nam Định, VN.</span>
+                            <span>Bình Minh<br>Nam Trực, Nam Định</span>
                             <p class="address">Xóm Tây Hành Quần, Xã Bình Minh, Huyện Nam Trực, Tỉnh Nam Định</p>
                             <div class="clearfix"></div>
-                            <a style="transition: all 0.5s;" class="btgbtn" href="https://www.google.com/maps/place/20%C2%B019'43.6%22N+106%C2%B013'13.9%22E/@20.328777,106.220533,17z/data=!3m1!4b1!4m4!3m3!8m2!3d20.328777!4d106.220533">Open Map</a>
+                            <a style="transition: all 0.5s;" class="btgbtn" href="https://www.google.com/maps/place/20%C2%B019'43.6%22N+106%C2%B013'13.9%22E/@20.328777,106.220533,17z/data=!3m1!4b1!4m4!3m3!8m2!3d20.328777!4d106.220533">Chỉ Đường</a>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-12">
@@ -187,12 +155,12 @@
                     </div>
                     <div class="col-md-4 col-sm-12">
                         <div class="event-infobox">
-                            <h2 class="title-box">Wedding Party</h2>
+                            <h2 class="title-box">Lễ thành hôn</h2>
                             <h1>11:00 am</h1>
-                            <span>St. Sài Đồng<br>Long Biên, Hà Nội, VN.</span>
+                            <span>Sài Đồng<br>Long Biên, Hà Nội</span>
                             <p class="address">Nhà số 1 Ngõ 114 Phố Sài Đồng Quận Long Biên Thành Phố Hà Nội</p>
                             <div class="clearfix"></div>
-                            <a style="text-decoration: none;" class="btgbtn" href="https://www.google.com/maps/place/21%C2%B002'10.6%22N+105%C2%B054'42.8%22E/@21.036264,105.91188,17z/data=!3m1!4b1!4m4!3m3!8m2!3d21.036264!4d105.91188">Open Map</a>
+                            <a style="text-decoration: none;" class="btgbtn" href="https://www.google.com/maps/place/21%C2%B002'10.6%22N+105%C2%B054'42.8%22E/@21.036264,105.91188,17z/data=!3m1!4b1!4m4!3m3!8m2!3d21.036264!4d105.91188">Chỉ Đường</a>
                         </div>
                     </div>
                 </div>
@@ -204,8 +172,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                        <span>Our Memories</span>
-                        <h2>Wedding Gallery</h2>
+                        <span>Khoảnh Khắc Bên Nhau</span>
+                        <h2 class="heading-title">ALBUMS ẢNH CƯỚI</h2>
                         <!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
                     </div>
                 </div>
@@ -356,7 +324,7 @@
             <div class="container">
                 <div class="row animate-box">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-                        <h2>We Offer Services</h2>
+                        <h2 class="heading-title">We Offer Services</h2>
                         <p>For guests who are busy or unable to attend, If you want to congratulate and send us a message, You can scan the code below</p>
                     </div>
                 </div>
